Platform 1.06

* Smile support in http-client

  We added SmileBodyMapper, SmileResponseHandler, and
  FullSmileResponseHandler classes to the http-client sub-project.

* Rack moved to separate project

  We moved the rack packaging support into the platform-rack project.

Platform 1.05

* Findbugs run by default

  Findbugs is now hooked into the verify lifecycle phase. (The previous
  attempt was missing a step.) Failing the build on Findbugs failures is
  now disabled by default.

* Reporting

  We added support for reporting string values to KairosDB. Reported values
  that are not Number or Boolean have their toString() reported as a string.

* MaxDataSize and MinDataSize

  We added MaxDataSize and MinDataSize Bean validations.

* HttpClient

  We added a "http-client.max-requests-queued-per-destination" config option
  (default 1024).

* Thread Factory

  We have changed the thread factory implementations to capture the thread
  context class loader during factory creation and set this class loader on
  threads created by the factory.

* Smile mapper

  We have added a JAX-RS mapper encoding responses using Smile.  Smile is a
  highly efficient binary encoding of JSON data.  For more information on
  Smile see: http://wiki.fasterxml.com/SmileFormatSpec

* Library upgrades
  - joda-time to 2.4
  - Jersey to 2.12
  - Jetty to 9.2.2
  - Jackson to 2.4.2

* Maven plugin upgrades
  - findbugs-maven-plugin to 3.0.0

* [Bug] Don't unannounce from discovery if Announcer never started.

Platform 1.04

* RPM packaging

  We added support to rest-server-base for packaging projects into RPMs.
  This profile is activated on Linux by creating a file .build-rpm in
  the root of the module or submodule. This file can be empty. The RPM
  is attached as an additional artifact.

  The username used to run the server defaults to ${project.artifactId}
  and can be changed by setting the property ${project.rpm.username}.
