@@ -5,6 +5,17 @@ Platform 1.06
   We added SmileBodyMapper, SmileResponseHandler, and
   FullSmileResponseHandler classes to the http-client sub-project.
 
+* SetThreadName
+
+  The SetThreadName class takes advantage of try-with-resources to safely rename a
+  thread and restore its original name when it goes out of scope.
+
+  Here's a usage example:
+
+      try (SetThreadName ignored = new SetThreadName("query-%s", queryId)) {
+          ...
+      }
+
 * Rack moved to separate project
 
   We moved the rack packaging support into the platform-rack project.
